Added schemaless creation of filter structure
- Added procedure for creation of filter structure for schemaless
  mountpoints.
- Added two unit tests that cover most of the cases.

JIRA: NETCONF-735
Change-Id: Ib276ddaf79e5306ff6c2193a03a8b0f57f005991
Signed-off-by: Jaroslav Tóth <jtoth@frinx.io>
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>